[project]
name = "langchain-langgraph"
version = "0.1.0"
description = "LangChain / LangGraph Customer Service Example"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-stack==0.3.1",
    "llama-stack-client @ git+https://github.com/llamastack/llama-stack-client-python@65cbe680ebeb30bf7e7cfebd1238f57bef792f5d",
    "mcp==1.14.1",
    "ollama==0.6.0",
    "openai==1.109.1",
    "dotenv==0.9.9",
    "Flask==3.1.2",
    "langchain==1.0.1",
    "langchain-ollama==1.0.0",
    "langchain-openai==1.0.0",
    "langchain-mcp-adapters==0.1.11",
    "langgraph==1.0.0",
    "pydantic==2.12.3",
    "pytest==8.4.2",
    "grandalf==0.8",
    "litellm==1.77.7",
    "sqlalchemy==2.0.43",
    "google-auth==2.32.0",
    "mcp-server-git==2025.9.25",
]

[tool.setuptools]
py-modules = ["app", "workflow"]
